removed static. Added firbase support

--- a/howdy/templates/contact.html
+++ b/howdy/templates/contact.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {% load staticfiles %}
 
     <h2 style="padding-top: 2.5%; padding-bottom: 2.5%;">Current Secretaries</h2>
     <div class="row">
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" style="height: 5%"
-                                 src="{% static "images/members/govinda_totla.jpg" %}" alt="Govinda Totla"></a>
+                <a href="#"><img class="card-img-top"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/govinda_totla.png?alt=media&token=8755572f-0f38-4274-9ed5-98e3c3bf8fe5"
+                                 alt="Govinda Totla"></a>
                 <div class="card-body">
                     <h4 class="card-title">
                         Govinda Totla
                     </h4>
-                    <p class="card-text">CP me master hai. Blue stacks me intern. POTW banata hai</p>
+                    <p class="card-text">Add description</p>
                     <a href="https://www.facebook.com/govinda.totla.1">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
@@ -22,30 +22,90 @@
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" style="height: 5%"
-                                 src="{% static "images/members/akshay_sharma.jpg" %}" alt="Akshay Sharma"></a>
+                <a href="#"><img class="card-img-top"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/akshay_sharma.png?alt=media&token=d9d37c67-2d41-4189-bed1-6f11bad0aaf5"
+                                 alt="Akshay Sharma"></a>
                 <div class="card-body">
                     <h4 class="card-title">
                         Akshay Sharma
                     </h4>
-                    <p class="card-text">Thodi thodi dev ati hai. GSOC laga hai is saal</p>
+                    <p class="card-text">Add description</p>
                     <a href="https://github.com/AKS1996">
                         <i class="fa fa-github-alt" style="font-size:36px"></i>
+                    </a>
+                    <a href="https://www.facebook.com/1996AKS">
+                        <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" style="height: 5%"
-                                 src="{% static "images/members/abhishek_sharma.jpg" %}" alt="abhishek Sharma"></a>
+                <a href="#"><img class="card-img-top"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/abhishek_sharma.png?alt=media&token=3378fd59-b7a7-48b3-ac36-397ea06c1fbe"
+                                 alt="abhishek Sharma"></a>
                 <div class="card-body">
                     <h4 class="card-title">
                         Abhishek Sharma
                     </h4>
-                    <p class="card-text">ML ati hai. Pointer sahi hai. Intern IIIT-H</p>
+                    <p class="card-text">Add description</p>
                     <a href="https://github.com/abhishek0318">
                         <i class="fa fa-github-alt" style="font-size:36px"></i>
+                    </a>
+                    <a href="https://www.facebook.com/abhishek.sharma.0318">
+                        <i class="fa fa-facebook-official" style="font-size:36px"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <h2 style="padding-top: 2.5%; padding-bottom: 2.5%;">Current Coordinators</h2>
+    <div class="row">
+        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+            <div class="card h-100">
+                <a href="#"><img class="card-img-top"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/abhinav_singh.jpeg?alt=media&token=9c46f71e-9212-458a-8c6e-02b0a9583d4f"
+                                 alt="Abhinav Gupta"></a>
+                <div class="card-body">
+                    <h4 class="card-title">
+                        Abhinav Gupta
+                    </h4>
+                    <p class="card-text">Add description</p>
+                    <a href="https://www.facebook.com/abhigupta768">
+                        <i class="fa fa-facebook-official" style="font-size:36px"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+            <div class="card h-100">
+                <a href="#"><img class="card-img-top"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/ayush_sharma.jpg?alt=media&token=5bc83a64-6392-41a9-84c4-a11b576c0d01"
+                                 alt="Ayush Sharma"></a>
+                <div class="card-body">
+                    <h4 class="card-title">
+                        Ayush Sharma
+                    </h4>
+                    <p class="card-text">Add description</p>
+                    <a href="https://www.facebook.com/sharmaayush358">
+                        <i class="fa fa-facebook-official" style="font-size:36px"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+            <div class="card h-100">
+                <a href="#"><img class="card-img-top"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/utkarsh_tripathi.png?alt=media&token=de037851-d04f-4565-b649-c094fbcd22ac"
+                                 alt="Utkarsh Tripathi"></a>
+                <div class="card-body">
+                    <h4 class="card-title">
+                        Utkarsh Tripathi
+                    </h4>
+                    <p class="card-text">Add description</p>
+                    <a href="https://www.facebook.com/utkarsh.tripathi.315">
+                        <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
                 </div>
             </div>
@@ -56,13 +116,14 @@
     <div class="row">
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" style="height: 5%"
-                                 src="{% static "images/members/kartik_kumar.jpg" %}" alt="Kartik Kumar"></a>
+                <a href="#"><img class="card-img-top"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/kartik_kumar.png?alt=media&token=abff35f2-61bb-4979-b3b3-9c1225b50918"
+                                 alt="Kartik Kumar"></a>
                 <div class="card-body">
                     <h4 class="card-title">
                         Kartik Kumar
                     </h4>
-                    <p class="card-text">Senior</p>
+                    <p class="card-text">Add description</p>
                     <a href="https://www.facebook.com/kkumar.poo">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
@@ -71,13 +132,14 @@
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" style="height: 5%"
-                                 src="{% static "images/members/pranjal_jain.jpg" %}" alt="Pranjal Jain"></a>
+                <a href="#"><img class="card-img-top"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/pranjal_jain.jpg?alt=media&token=d889fb46-695f-4937-93d8-f81d52a5045d"
+                                 alt="Pranjal Jain"></a>
                 <div class="card-body">
                     <h4 class="card-title">
                         Pranjal Jain
                     </h4>
-                    <p class="card-text">Senior</p>
+                    <p class="card-text">Add description</p>
                     <a href="https://www.facebook.com/praran26">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
@@ -86,13 +148,14 @@
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-                <a href="#"><img class="card-img-top" style="height: 5%"
-                                 src="{% static "images/members/deeksha_kourav.jpg" %}" alt="Deeksha Kaurav"></a>
+                <a href="#"><img class="card-img-top"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/deeksha_kourav.jpg?alt=media&token=baa7dfd2-2f21-41eb-95e1-a138ba589382"
+                                 alt="Deeksha Kaurav"></a>
                 <div class="card-body">
                     <h4 class="card-title">
                         Deeksha Kaurav
                     </h4>
-                    <p class="card-text">Senior</p>
+                    <p class="card-text">Add description</p>
                     <a href="https://www.facebook.com/deeksha.kaurav">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
