--- a/howdy/templates/about.html
+++ b/howdy/templates/about.html
@@ -5,8 +5,7 @@
         <div class="mb-4 col-md-8">
             <h2>Club of Programmers IIT (BHU) Varanasi</h2>
 
-            {% load staticfiles %}
-            <img src="{% static "images/logo.jpg" %}" style="border-radius:5%; max-width: 40%; margin-bottom: 5%">
+            <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/logo.jpg?alt=media&token=d6f4c531-bec6-483e-83b3-166861c19d35" style="border-radius:5%; max-width: 40%; margin-bottom: 5%">
 
             <p>
                 In this age of increasing automation, programming is not only limited to computer science and related
