--- a/howdy/templates/base.html
+++ b/howdy/templates/base.html
@@ -7,17 +7,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-
-    {% load staticfiles %}
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static "images/favicon-32x32.png" %}">
-    <link rel="icon" type="image/png" sizes="96x96" href="{% static "images/favicon-96x96.png" %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static "images/favicon-16x16.png" %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/favicon-32x32.png?alt=media&token=79e4c4f3-0040-4211-a100-ea01ab063630">
+{#    <link rel="icon" type="image/png" sizes="96x96" href="{% static "images/favicon-96x96.png" %}">#}
+{#    <link rel="icon" type="image/png" sizes="16x16" href="{% static "images/favicon-16x16.png" %}">#}
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="{% static "css/main.css" %}">
+    <link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/main.css?alt=media&token=e8f1fba7-0d28-4fd2-aa2b-de1fbcb4162e">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.min.css?alt=media&token=13c69f8e-23ae-4fad-8287-861f0d61a984">
 
     <!-- Font awesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -70,7 +68,7 @@
 </footer>
 
 <!-- Bootstrap core JavaScript -->
-<script src="{% static "js/jquery.min.js" %}"></script>
-<script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
+<script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/jquery.min.js?alt=media&token=ab5c31e7-0920-40cc-9274-8ea2922947f8"></script>
+<script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.bundle.min.js?alt=media&token=4e419bbe-683e-4e02-b87f-c50822033849"></script>
 </body>
 </html>
