--- a/howdy/templates/contact.html
+++ b/howdy/templates/contact.html
@@ -7,34 +7,52 @@
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
                 <a href="#"><img class="card-img-top"
-                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/govinda_totla.png?alt=media&token=8755572f-0f38-4274-9ed5-98e3c3bf8fe5"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/govinda_totla.jpg?alt=media&token=366ee9fa-eff3-4469-865b-8ac32156eb0e"
                                  alt="Govinda Totla"></a>
                 <div class="card-body">
                     <h4 class="card-title">
                         Govinda Totla
                     </h4>
-                    <p class="card-text">Add description</p>
                     <a href="https://www.facebook.com/govinda.totla.1">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
+
+                    {# Add person Email#}
+                    <a href="mailto:govinda.totla.cse16@itbhu.ac.in">
+                        <i class="fa fa-envelope" style="font-size:36px"></i>
+                    </a>
+
+                    <a href="http://codeforces.com/profile/GT_18">
+                       <i class="fa fa-code" style="font-size:36px"></i>
+                    </a>
+
                 </div>
             </div>
         </div>
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
                 <a href="#"><img class="card-img-top"
-                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/akshay_sharma.png?alt=media&token=d9d37c67-2d41-4189-bed1-6f11bad0aaf5"
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/IMG-20180513-WA0006%20-%20AKSHAY%20SHARMA.jpg?alt=media&token=a9940ba4-9d2a-434a-8cef-637419c592ab"
                                  alt="Akshay Sharma"></a>
                 <div class="card-body">
                     <h4 class="card-title">
                         Akshay Sharma
                     </h4>
-                    <p class="card-text">Add description</p>
+                    
                     <a href="https://github.com/AKS1996">
-                        <i class="fa fa-github-alt" style="font-size:36px"></i>
+                        <i class="fa fa-github" style="font-size:36px"></i>
                     </a>
                     <a href="https://www.facebook.com/1996AKS">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
+                    </a>
+
+                    {# Add person Email#}
+                    <a href="mailto:akshay.sharma.mat16@itbhu.ac.in">
+                        <i class="fa fa-envelope" style="font-size:36px"></i>
+                    </a>
+
+                    <a href="http://codeforces.com/profile/abhishek0318">
+                       <i class="fa fa-code" style="font-size:36px"></i>
                     </a>
                 </div>
             </div>
@@ -42,19 +60,28 @@
         <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
                 <a href="#"><img class="card-img-top"
-                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/abhishek_sharma.png?alt=media&token=3378fd59-b7a7-48b3-ac36-397ea06c1fbe"
-                                 alt="abhishek Sharma"></a>
+                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/2018-01-01-05-01-23%20-%20ABHISHEK%20SHARMA%205-Yr%20IMD%20Math.%20_%20Computing%2C%20IIT%20(BHU).jpg?alt=media&token=a2ead577-7198-47d9-9684-459dc621beb5"
+                                 alt="Abhishek Sharma"></a>
                 <div class="card-body">
                     <h4 class="card-title">
                         Abhishek Sharma
                     </h4>
-                    <p class="card-text">Add description</p>
+                    
                     <a href="https://github.com/abhishek0318">
-                        <i class="fa fa-github-alt" style="font-size:36px"></i>
+                        <i class="fa fa-github" style="font-size:36px"></i>
                     </a>
                     <a href="https://www.facebook.com/abhishek.sharma.0318">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
+
+                    {# Add person Email#}
+                    <a href="mailto:abhishek.sharma.mat16@itbhu.ac.in">
+                        <i class="fa fa-envelope" style="font-size:36px"></i>
+                    </a>
+
+                     <a href="http://codeforces.com/profile/abhishek0318">
+                        <i class="fa fa-code" style="font-size:36px"></i>
+                     </a>
                 </div>
             </div>
         </div>
@@ -62,54 +89,51 @@
 
     <h2 style="padding-top: 2.5%; padding-bottom: 2.5%;">Current Coordinators</h2>
     <div class="row">
-        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
+        {% for person in objects %}
+            <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
             <div class="card h-100">
                 <a href="#"><img class="card-img-top"
-                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/abhinav_singh.jpeg?alt=media&token=9c46f71e-9212-458a-8c6e-02b0a9583d4f"
-                                 alt="Abhinav Gupta"></a>
+                                 src= "{{ person.1 }}"
+                                 alt="{{ person.0 }}"></a>
                 <div class="card-body">
                     <h4 class="card-title">
-                        Abhinav Gupta
+                        {{ person.0 }}
                     </h4>
-                    <p class="card-text">Add description</p>
-                    <a href="https://www.facebook.com/abhigupta768">
-                        <i class="fa fa-facebook-official" style="font-size:36px"></i>
+
+                    {# Add person facebook handle if it exists#}
+                    {% if person.3 %}
+                        <a href="https://www.facebook.com/{{ person.3 }}">
+                            <i class="fa fa-facebook-official" style="font-size:36px"></i>
+                        </a>
+                    {% endif %}
+
+                    {# Add person github handle if it exists#}
+                    {% if person.6 %}
+                        <a href="https://www.github.com/{{ person.6 }}">
+                            <i class="fa fa-github" style="font-size:36px"></i>
+                        </a>
+                    {% endif %}
+
+                    {# Add person CodeForces/CodeChef handle if it exists#}
+                    {% if person.5 %}
+                        <a href="https://www.codechef.com/users/{{ person.5 }}">
+                            <i class="fa fa-code" style="font-size:36px"></i>
+                        </a>
+                    {% endif %}
+
+                    {# Add person Email#}
+                    <a href="mailto:{{ person.2 }}">
+                        <i class="fa fa-envelope" style="font-size:36px"></i>
                     </a>
+
+                    {# Add Email and Phone Number #}
+                    <p class="card-text">{{ person.4 }}</p>
                 </div>
             </div>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-                <a href="#"><img class="card-img-top"
-                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/ayush_sharma.jpg?alt=media&token=5bc83a64-6392-41a9-84c4-a11b576c0d01"
-                                 alt="Ayush Sharma"></a>
-                <div class="card-body">
-                    <h4 class="card-title">
-                        Ayush Sharma
-                    </h4>
-                    <p class="card-text">Add description</p>
-                    <a href="https://www.facebook.com/sharmaayush358">
-                        <i class="fa fa-facebook-official" style="font-size:36px"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 portfolio-item">
-            <div class="card h-100">
-                <a href="#"><img class="card-img-top"
-                                 src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/utkarsh_tripathi.png?alt=media&token=de037851-d04f-4565-b649-c094fbcd22ac"
-                                 alt="Utkarsh Tripathi"></a>
-                <div class="card-body">
-                    <h4 class="card-title">
-                        Utkarsh Tripathi
-                    </h4>
-                    <p class="card-text">Add description</p>
-                    <a href="https://www.facebook.com/utkarsh.tripathi.315">
-                        <i class="fa fa-facebook-official" style="font-size:36px"></i>
-                    </a>
-                </div>
-            </div>
-        </div>
+        {% empty %}
+            <li>No persons yet</li>
+        {% endfor %}
     </div>
 
     <h2 style="padding-top: 2.5%; padding-bottom: 2.5%;">Past Secretaries</h2>
@@ -123,7 +147,6 @@
                     <h4 class="card-title">
                         Kartik Kumar
                     </h4>
-                    <p class="card-text">Add description</p>
                     <a href="https://www.facebook.com/kkumar.poo">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
@@ -139,7 +162,7 @@
                     <h4 class="card-title">
                         Pranjal Jain
                     </h4>
-                    <p class="card-text">Add description</p>
+                    
                     <a href="https://www.facebook.com/praran26">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
@@ -155,7 +178,7 @@
                     <h4 class="card-title">
                         Deeksha Kaurav
                     </h4>
-                    <p class="card-text">Add description</p>
+                    
                     <a href="https://www.facebook.com/deeksha.kaurav">
                         <i class="fa fa-facebook-official" style="font-size:36px"></i>
                     </a>
