going to add gihub markdown API

--- a/howdy/templates/base.html
+++ b/howdy/templates/base.html
@@ -7,15 +7,18 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/favicon-32x32.png?alt=media&token=79e4c4f3-0040-4211-a100-ea01ab063630">
-{#    <link rel="icon" type="image/png" sizes="96x96" href="{% static "images/favicon-96x96.png" %}">#}
-{#    <link rel="icon" type="image/png" sizes="16x16" href="{% static "images/favicon-16x16.png" %}">#}
+    <link rel="icon" type="image/png" sizes="32x32"
+          href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/favicon-32x32.png?alt=media&token=79e4c4f3-0040-4211-a100-ea01ab063630">
+    {#    <link rel="icon" type="image/png" sizes="96x96" href="{% static "images/favicon-96x96.png" %}">#}
+    {#    <link rel="icon" type="image/png" sizes="16x16" href="{% static "images/favicon-16x16.png" %}">#}
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/main.css?alt=media&token=e8f1fba7-0d28-4fd2-aa2b-de1fbcb4162e">
+    <link rel="stylesheet"
+          href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/main.css?alt=media&token=e8f1fba7-0d28-4fd2-aa2b-de1fbcb4162e">
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.min.css?alt=media&token=13c69f8e-23ae-4fad-8287-861f0d61a984">
+    <link rel="stylesheet"
+          href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.min.css?alt=media&token=13c69f8e-23ae-4fad-8287-861f0d61a984">
 
     <!-- Font awesome-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -44,7 +47,7 @@
                     <a class="nav-link" href="/projects">Projects</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/blog">Blog</a>
+                    <a class="nav-link" href="/posts">Posts</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="https://github.com/cops-iitbhu?tab=repositories">Repositories</a>
@@ -60,9 +63,21 @@
 </div>
 
 <!-- Footer -->
-<footer class="py-5 bg-dark">
+<footer class="py-3 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
+        <div class="row">
+            <div class="col-md-6" align="center">
+                <font class="m-0 text-center text-white">Designed @ COPS 2018</font>
+            </div>
+            <div class="col-md-6" align="center">
+                <a href="https://github.com/COPS-IITBHU/">
+                    <i class="fa fa-github" style="font-size:24px; color: white;"></i>
+                </a>
+                <a href="https://www.facebook.com/cops.iitbhu/">
+                    <i class="fa fa-facebook" style="font-size:24px; color: white;"></i>
+                </a>
+            </div>
+        </div>
     </div>
     <!-- /.container -->
 </footer>
