--- a/howdy/templates/posts.html
+++ b/howdy/templates/posts.html
@@ -2,15 +2,13 @@
 
 {% block content %}
     <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">Blog Home One
-        <small>Subheading</small>
-      </h1>
+      <h1 class="mt-4 mb-3">Posts Home </h1>
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
           <a href="index.html">Home</a>
         </li>
-        <li class="breadcrumb-item active">Blog Home 1</li>
+        <li class="breadcrumb-item active">Posts Page 1</li>
       </ol>
 
       <div class="row">
@@ -18,47 +16,24 @@
         <!-- Blog Entries Column -->
         <div class="col-md-8">
 
-          <!-- Blog Post -->
-          <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
-          </div>
+            {#  Add posts by reading the contents of `posts` folder  #}
+            {%  for post in list_of_posts %}
 
-          <!-- Blog Post -->
-          <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
-          </div>
+              <!-- Blog Post -->
+              <div class="card mb-4">
+                <img class="card-img-top" src="{{ post.3 }}">
+                <div class="card-body">
+                  <h2 class="card-title">{{ post.0 }}</h2>
+                  <p class="card-text">{{ post.2 }}</p>
+                  <a href="#" class="btn btn-primary">Read More &rarr;</a>
+                </div>
+                <div class="card-footer text-muted">
+                  Posted on {{ post.4 }} by
+                  <a href="#">{{ post.1 }}</a>
+                </div>
+              </div>
 
-          <!-- Blog Post -->
-          <div class="card mb-4">
-            <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-            <div class="card-body">
-              <h2 class="card-title">Post Title</h2>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-              <a href="#" class="btn btn-primary">Read More &rarr;</a>
-            </div>
-            <div class="card-footer text-muted">
-              Posted on January 1, 2017 by
-              <a href="#">Start Bootstrap</a>
-            </div>
-          </div>
+            {% endfor %}
 
           <!-- Pagination -->
           <ul class="pagination justify-content-center mb-4">
