--- a/howdy/templates/markdown.html
+++ b/howdy/templates/markdown.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{# {% extends "base.html" %} #}
 
-{% block content %}
+{# {% block content %} #}
 <!-- Bootstrap core CSS -->
 <link rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/2.10.0/github-markdown.css">
@@ -26,4 +26,4 @@
         {% autoescape off %}{{ markdown_content |safe }}{% endautoescape %}
     </article>
 
-{% endblock %}
+{# {% endblock %} #}
