--- a/howdy/templates/index.html
+++ b/howdy/templates/index.html
@@ -476,7 +476,7 @@ Although the club has been functioning quite well as compared to other clubs, st
   <script src="{% static 'lib/superfish/superfish.min.js' %}"></script>
 
   <!-- Template Main Javascript File -->
-  <script src="js/main.js"></script>
+  <script src="{% static 'js/main.js' %}"></script>
 
 
 
