--- a/howdy/templates/timeline.html
+++ b/howdy/templates/timeline.html
@@ -6,9 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta charset="UTF-8">
 
-        <link rel="stylesheet" type="text/css" href="{% static "css/bootstrap.min.css" %}>
-        <link rel="stylesheet" type="text/css" href="{% static "css/font-awesome.min.css" %}>
-        <link rel="stylesheet" type="text/css" href="{% static "css/templatemo-style.css" %}>
+        <link rel="stylesheet" type="text/css" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.min.css?alt=media&token=13c69f8e-23ae-4fad-8287-861f0d61a984">
+        <link rel="stylesheet" type="text/css" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/font-awesome.min.css?alt=media&token=ddcb4c2b-c6e5-4e65-85b0-6a78fec28da1">
+        <link rel="stylesheet" type="text/css" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/templatemo-style.css?alt=media&token=6311d753-2851-4de5-bfc8-d024338bfe52">
 
         <!-- JavaScripts -->
         <script src="{% static "js/vendor/jquery-1.10.2.min.js" %}></script>
