remove js static files timeline

--- a/howdy/templates/timeline.html
+++ b/howdy/templates/timeline.html
@@ -11,9 +11,8 @@
         <link rel="stylesheet" type="text/css" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/templatemo-style.css?alt=media&token=6311d753-2851-4de5-bfc8-d024338bfe52">
 
         <!-- JavaScripts -->
-        <script src="{% static "js/vendor/jquery-1.10.2.min.js" %}></script>
-        <script src="{% static "js/vendor/modernizr.min.js" %}></script>
-        </script>
+        <script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/jquery-1.10.2.min.js?alt=media&token=9899dadf-704b-4b19-bbce-14cc58179396"></script>
+        <script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/modernizr.min.js?alt=media&token=a75b66b4-fc75-4947-9dd7-2e59c9b78e49"></script>
 
 	</head>
 	<body>
