remove some more static files

--- a/howdy/templates/timeline.html
+++ b/howdy/templates/timeline.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 	<head>
 		<title>Timeline - Free Responsive Template</title>
         <meta name="description" content="">
@@ -185,8 +186,8 @@
     
 		<!-- Javascripts -->
 
-		<script type="text/javascript" src="{% static "js/vendor/bootstrap.min.js" %}"></script>
-		<script type="text/javascript" src="{% static "js/custom.js" %}"></script>
+		<script type="text/javascript" src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.min.js?alt=media&token=ba259738-151a-4ca7-88c8-177421d837bf"></script>
+		<script type="text/javascript" src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/custom.js?alt=media&token=cef55bbe-5266-41c5-9938-6123fdeb0f3f"></script>
 
 	</body>
 </html>
