--- a/howdy/templates/posts.html
+++ b/howdy/templates/posts.html
@@ -6,7 +6,7 @@
 
       <ol class="breadcrumb">
         <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
+          <a href="/">Home</a>
         </li>
         <li class="breadcrumb-item active">Posts Page 1</li>
       </ol>
