--- a/howdy/templates/timeline.html
+++ b/howdy/templates/timeline.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 	<head>
@@ -50,7 +51,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <img id="computer" src="images/computer1.jpg" alt="computer">
+                    <img id="computer" src="{% static images\computer1.jpg %}" alt="computer">
                 </div>
             </div>
         </div>               
