chnage in static files

--- a/howdy/templates/timeline.html
+++ b/howdy/templates/timeline.html
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html>
 	<head>
@@ -51,7 +50,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <img id="computer" src="{% static images\computer1.jpg %}" alt="computer">
+                    <img id="computer" src="images\computer1.jpg" alt="computer">
                 </div>
             </div>
         </div>               
@@ -79,7 +78,7 @@
                     <section id="cd-timeline-2" class="cd-container">
                         <div class="cd-timeline-block">
                             <div class="cd-timeline-img cd-picture">
-                                <img src="images/camera-icon.png" alt="Picture">
+                                <img src="images/camera_icon.png" alt="Picture">
                             </div>
 
                             <div class="cd-timeline-content projects">
