replace static images by firebase ones

--- a/howdy/templates/timeline.html
+++ b/howdy/templates/timeline.html
@@ -50,7 +50,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <img id="computer" src="images\computer1.jpg" alt="computer">
+                    <img id="computer" src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/computer1.jpg?alt=media&token=52d3d493-fd7b-4f22-8061-ea23710b4eca" alt="computer">
                 </div>
             </div>
         </div>               
@@ -78,11 +78,11 @@
                     <section id="cd-timeline-2" class="cd-container">
                         <div class="cd-timeline-block">
                             <div class="cd-timeline-img cd-picture">
-                                <img src="images/camera_icon.png" alt="Picture">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/camera_icon.png?alt=media&token=856c51b4-fadd-4136-a8b8-2b92270a1f2a" alt="Picture">
                             </div>
 
                             <div class="cd-timeline-content projects">
-                                <img src="images/project-1.jpg" alt="">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/project-1.jpg?alt=media&token=70890aad-0299-41e2-9d5d-809f07be7e5a" alt="">
                                 <div class="project-content">
                                     <h2>Donec at scelerisque</h2>
                                     <span>18 December 2084</span>
@@ -92,11 +92,11 @@
 
                         <div class="cd-timeline-block">
                             <div class="cd-timeline-img cd-picture">
-                                <img src="images/camera-icon.png" alt="Picture">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/camera_icon.png?alt=media&token=856c51b4-fadd-4136-a8b8-2b92270a1f2a" alt="Picture">
                             </div>
 
                             <div class="cd-timeline-content projects">
-                                <img src="images/project-2.jpg" alt="">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/project-2.jpg?alt=media&token=1816580e-a026-4533-b358-77aabea68bd5" alt="">
                                 <div class="project-content">
                                     <h2>Nullam hendrerit ultrices</h2>
                                     <span>12 December 2084</span>
@@ -106,11 +106,11 @@
 
                         <div class="cd-timeline-block">
                             <div class="cd-timeline-img cd-picture">
-                                <img src="images/camera-icon.png" alt="Picture">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/camera_icon.png?alt=media&token=856c51b4-fadd-4136-a8b8-2b92270a1f2a" alt="Picture">
                             </div>
 
                             <div class="cd-timeline-content projects">
-                                <img src="images/project-3.jpg" alt="">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/project-3.jpg?alt=media&token=2757e67c-6bf3-4d4f-b747-a74a9aa8d8ab" alt="">
                                 <div class="project-content">
                                     <h2>Quisque mollis diam</h2>
                                     <span>10 December 2084</span>
@@ -120,11 +120,11 @@
 
                         <div class="cd-timeline-block">
                             <div class="cd-timeline-img cd-picture">
-                                <img src="images/camera-icon.png" alt="Picture">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/camera_icon.png?alt=media&token=856c51b4-fadd-4136-a8b8-2b92270a1f2a" alt="Picture">
                             </div>
 
                             <div class="cd-timeline-content projects">
-                                <img src="images/project-4.jpg" alt="">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/project-4.jpg?alt=media&token=395986eb-522f-4627-9f6b-c9cf1aef06b7" alt="">
                                 <div class="project-content">
                                     <h2>Etiam a ultricies</h2>
                                     <span>30 November 2084</span>
@@ -134,11 +134,11 @@
 
                         <div class="cd-timeline-block">
                             <div class="cd-timeline-img cd-picture">
-                                <img src="images/camera-icon.png" alt="Picture">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/camera_icon.png?alt=media&token=856c51b4-fadd-4136-a8b8-2b92270a1f2a" alt="Picture">
                             </div>
 
                             <div class="cd-timeline-content projects">
-                                <img src="images/project-5.jpg" alt="">
+                                <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/project-5.jpg?alt=media&token=b275bc6f-11ed-47e6-a6ac-c4fb9492d103" alt="">
                                 <div class="project-content">
                                     <h2>Curabitur interdum</h2>
                                     <span>22 November 2084</span>
