replace static files by firebase hosted URLS

--- a/website/templates/team.html
+++ b/website/templates/team.html
@@ -1,9 +1,7 @@
-{% load static %}
-
 <html>
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="team.css">
+        <link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/team.css?alt=media&token=6c5b36c7-f2d9-4546-b4fa-9f82de4dbdbb">
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -46,7 +44,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team1.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/IMG-20180513-WA0006%20-%20AKSHAY%20SHARMA.jpg?alt=media&token=a9940ba4-9d2a-434a-8cef-637419c592ab" alt="" />
                         <div class="single_team_text text-center" id="memtext1">
                             <h6>Akshay Sharma</h6>
                             <p>Joint Secretary</p>
@@ -62,7 +60,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team2.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/govinda_totla.jpg?alt=media&token=366ee9fa-eff3-4469-865b-8ac32156eb0e" alt="" />
                         <div class="single_team_text text-center" id="memtext2">
                             <h6>Govinda Totla</h6>
                             <p>General Secretary</p>
@@ -78,7 +76,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team3.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/2018-01-01-05-01-23%20-%20ABHISHEK%20SHARMA%205-Yr%20IMD%20Math.%20_%20Computing%2C%20IIT%20(BHU).jpg?alt=media&token=a2ead577-7198-47d9-9684-459dc621beb5" alt="" />
                         <div class="single_team_text text-center" id="memtext3">
                             <h6>Abhishek Sharma</h6>
                             <p>Joint Secretary</p>
@@ -98,7 +96,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team1.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext1">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -114,7 +112,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team2.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext2">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -130,7 +128,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team3.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext3">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -146,7 +144,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team2.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext2">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -162,7 +160,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team1.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext2">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -178,7 +176,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team2.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext2">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -197,7 +195,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team1.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext1">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -213,7 +211,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team2.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext2">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -229,7 +227,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team3.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext3">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -245,7 +243,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team2.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext2">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -261,7 +259,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team1.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext2">
                             <h6>John Doe</h6>
                             <p>Member</p>
@@ -277,7 +275,7 @@
                             <a href=""><i class="fab fa-linkedin fa-lg"></i></a>
                             <a href=""><i class="fab fa-google-plus fa-lg"></i></a>
                         </div>
-                        <img src="{% static "img/team2.jpg" %}" alt="" />
+                        <img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/Vaibhav.jpg?alt=media&token=127db1a1-2f8a-4135-9ccb-1ce5835f4550" alt="" />
                         <div class="single_team_text text-center" id="memtext2">
                             <h6>John Doe</h6>
                             <p>Member</p>
