--- a/website/templates/projects.htm
+++ b/website/templates/projects.htm
@@ -1,4 +1,3 @@
-{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -11,9 +10,9 @@
 		<title>COPS Projects</title>
 		<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
 		<link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.4/css/mdb.min.css" rel="stylesheet">
-		<link href="{% static 'vendors/chosen/chosen.min.css' %}" rel="stylesheet">
-		<link rel="stylesheet" href="{% static 'vendors/noUiSlider/nouislider.min.css' %}">
-		<link href="{% static 'css/projects-style.css' %}" rel="stylesheet">
+		<link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/chosen.css?alt=media&token=3a13c364-402e-4a31-b7ee-4de024674732" rel="stylesheet">
+		<link rel="stylesheet" href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/nouislider.min.css?alt=media&token=1e4f10a8-53ff-49aa-8072-8ff3d3bdaf3b">
+		<link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/projects-style.css?alt=media&token=a67eeb19-4bcf-43fe-8c25-446393a33d66" rel="stylesheet">
 	</head>
 	<body class="h-100 m-0 bg-light">
 		<nav class="navbar fixed-top navbar-expand-md navbar-dark bg-success shadow-sm">
@@ -146,9 +145,9 @@
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js" integrity="sha384-u/bQvRA/1bobcXlcEYpsEdFVK/vJs3+T+nXLsBYJthmdBuavHvAW6UsmqO2Gd/F9" crossorigin="anonymous"></script>
 		<script src="https://use.fontawesome.com/releases/v5.1.0/js/all.js" integrity="sha384-3LK/3kTpDE/Pkp8gTNp2gR/2gOiwQ6QaO7Td0zV76UFJVhqLl4Vl3KL1We6q6wR9" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.4/js/mdb.min.js" type="text/javascript"></script>
-		<script src="{% static 'vendors/chosen/chosen.jquery.min.js' %}" type="text/javascript"></script>
-		<script src="{% static 'vendors/noUiSlider/nouislider.min.js' %}" type="text/javascript"></script>
-		<script src="{% static 'js/project-setup.js' %}" type="text/javascript"></script>
+		<script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/chosen.jquery.min.js?alt=media&token=45e3bf5f-d59f-40bc-af6c-c3220fd2cad7" type="text/javascript"></script>
+		<script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/nouislider.min.js?alt=media&token=ffcfd73d-6b42-4408-801c-e1442b6a1cfa" type="text/javascript"></script>
+		<script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/project-setup.js?alt=media&token=9418377f-2de0-4c15-96a2-4d17252e1183" type="text/javascript"></script>
 		<script type="text/javascript">
 			setup()
 			$("#advancedSearch").click(function(e) {
