--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -7,23 +7,19 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!-- Favicons -->
-    <link href="{% static 'img/favicon.png' %}" rel="icon">
-    <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon">
-
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Poppins:300,400,500,700"
           rel="stylesheet">
 
     <!-- Bootstrap CSS File -->
-    <link href="{% static '/lib/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.min.css?alt=media&token=13c69f8e-23ae-4fad-8287-861f0d61a984" rel="stylesheet">
 
     <!-- Libraries CSS Files -->
-    <link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
-    <link href="{% static 'css/animate.min.css' %}" rel="stylesheet">
+    <link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/font-awesome.min.css?alt=media&token=ddcb4c2b-c6e5-4e65-85b0-6a78fec28da1" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="stylesheet">
 
     <!-- Main Stylesheet File -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+{#    <link href="{% static 'css/style.css' %}" rel="stylesheet">#}
 
 </head>
 <body>
@@ -34,7 +30,7 @@ Header
     <div class="container">
 
         <div id="logo" class="pull-left">
-            <a href="#hero"><img src="{% static 'img/logo.png' %}" alt="" title=""/></a>
+            <a href="#hero"><img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/favicon-16x16.png?alt=media&token=bfa32cd8-d629-4bcb-bd4a-d444fca27669" alt="" title=""/></a>
 
         </div>
 
@@ -58,7 +54,7 @@ Header
 ============================-->
 <section id="hero">
     <div class="hero-container">
-        <div class="cc-profile-image"><a><img src="{% static 'img/favicon.png' %}" alt="Image"/></a></div>
+        <div class="cc-profile-image"><a><img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/favicon-16x16.png?alt=media&token=bfa32cd8-d629-4bcb-bd4a-d444fca27669" alt="Image"/></a></div>
         <h1 style="color:#f7f7f7;">Welcome to COPS</h1>
         <div class="btn-group">
             <div class="text-center btn-space">
@@ -492,19 +488,19 @@ Header
 <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
 <!-- JavaScript Libraries -->
-<script src="{% static 'lib/jquery/jquery.min.js' %}"></script>
-<script src="{% static 'lib/jquery/jquery-migrate.min.js' %}"></script>
+<script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/jquery.min.js?alt=media&token=ab5c31e7-0920-40cc-9274-8ea2922947f8"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-migrate/3.0.1/jquery-migrate.min.js"></script>
 <script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.bundle.min.js?alt=media&token=4e419bbe-683e-4e02-b87f-c50822033849"></script>
-<script src="{% static 'lib/easing/easing.min.js' %}"></script>
-<script src="{% static 'lib/wow/wow.min.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 
-<script src="{% static 'lib/waypoints/waypoints.min.js' %}"></script>
-<script src="{% static 'lib/counterup/counterup.min.js' %}"></script>
-<script src="{% static 'lib/superfish/hoverIntent.js' %}"></script>
-<script src="{% static 'lib/superfish/superfish.min.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/noframework.waypoints.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.hoverintent/1.9.0/jquery.hoverIntent.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/superfish/1.7.9/js/superfish.min.js"></script>
 
 <!-- Template Main Javascript File -->
-<script src="{% static 'js/main.js' %}"></script>
+{#<script src="{% static 'js/main.js' %}"></script>#}
 
 
 </body>
