link pages to indx page

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -37,13 +37,12 @@ Header
         <nav id="nav-menu-container">
             <ul class="nav-menu">
                 <li class="menu-active waves-effect active" style="height:5px;"><a href="#hero">Home</a></li>
-                <li><a href="#" class="btn waves-effect waves-brown waves-ripple">Blogs</a></li>
                 <li><a href="#about" class="btn waves-effect waves-brown waves-ripple">About</a></li>
                 <li><a href="#facts" class="btn waves-effect waves-brown waves-ripple">Stats</a></li>
-                <li><a href="#services" class="btn waves-effect waves-brown waves-ripple">Projects</a></li>
-                <li><a href="#" class="btn waves-effect waves-brown waves-ripple">Blogs</a></li>
-                <li><a href="#team" class="btn waves-effect waves-brown waves-ripple">Team</a></li>
-                <li><a href="#contact" class="btn waves-effect waves-brown waves-ripple">Contact Us</a></li>
+                <li><a href="/projects" class="btn waves-effect waves-brown waves-ripple">Projects</a></li>
+                <li><a href="/posts" class="btn waves-effect waves-brown waves-ripple">Blogs</a></li>
+                <li><a href="/team" class="btn waves-effect waves-brown waves-ripple">Team</a></li>
+                <li><a href="/contact" class="btn waves-effect waves-brown waves-ripple">Contact Us</a></li>
             </ul>
         </nav><!-- #nav-menu-container -->
     </div>
