add main.js and style.css

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -19,7 +19,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="stylesheet">
 
     <!-- Main Stylesheet File -->
-{#    <link href="{% static 'css/style.css' %}" rel="stylesheet">#}
+    <link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/style.css?alt=media&token=10a5dcc2-3307-4df3-b452-c7a8dc404d25" rel="stylesheet">
 
 </head>
 <body>
@@ -499,7 +499,7 @@ Header
 <script src="https://cdnjs.cloudflare.com/ajax/libs/superfish/1.7.9/js/superfish.min.js"></script>
 
 <!-- Template Main Javascript File -->
-{#<script src="{% static 'js/main.js' %}"></script>#}
+<script src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/main.js?alt=media&token=8940401d-3a6d-4b0b-a418-bfa7640cd587"></script>
 
 
 </body>
