remove about us page
remove a

--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -15,7 +15,7 @@
     <link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/bootstrap.min.css?alt=media&token=13c69f8e-23ae-4fad-8287-861f0d61a984" rel="stylesheet">
 
     <!-- Libraries CSS Files -->
-    <link href="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/font-awesome.min.css?alt=media&token=ddcb4c2b-c6e5-4e65-85b0-6a78fec28da1" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css" rel="stylesheet">
 
     <!-- Main Stylesheet File -->
@@ -30,7 +30,7 @@ Header
     <div class="container">
 
         <div id="logo" class="pull-left">
-            <a href="#hero"><img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/favicon-16x16.png?alt=media&token=bfa32cd8-d629-4bcb-bd4a-d444fca27669" alt="" title=""/></a>
+            <a href="#hero"><img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/logo64x64.jpg?alt=media&token=fbaa55c7-ce7b-4a12-ac90-33df1d1d9a9f" alt="" title=""/></a>
 
         </div>
 
@@ -53,7 +53,7 @@ Header
 ============================-->
 <section id="hero">
     <div class="hero-container">
-        <div class="cc-profile-image"><a><img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/favicon-16x16.png?alt=media&token=bfa32cd8-d629-4bcb-bd4a-d444fca27669" alt="Image"/></a></div>
+        <div class="cc-profile-image"><a><img src="https://firebasestorage.googleapis.com/v0/b/cops-iitbhu.appspot.com/o/logo512x512.jpg?alt=media&token=2064a481-42ad-482e-bd0f-bc577a2fa3c6" alt="Image"/></a></div>
         <h1 style="color:#f7f7f7;">Welcome to COPS</h1>
         <div class="btn-group">
             <div class="text-center btn-space">
